--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+* {
+ text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#root {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+div{
+  /* background-color: blue; */
+  width: 100%;
+  height: 100%;
+}
+
+img{
+  width: 500px;
+  border: 0.3rem #ff3737 solid;
+  margin-bottom: 1rem;
+}
+
+.fruit{
+  width:190px;
+  height: 190px;
+  object-fit: cover;
+  margin-top:1rem;
+}
+
+.dessert-img{
+  width:180px;
+  height:130px;
+  object-fit: cover;
+  border: solid yellow 5px;
+
+}
+
+button {
+  background-color: #FF5050;
+  padding: 15px;
+  margin: 5px;
+  border:#ff3737 3px solid;
+  font-weight: 700;
+}
+
+#changeColors{
   color: white;
+  background-color: blueviolet;
 }
 
-.App-link {
-  color: #61dafb;
+.dessert-button{
+  background-color: #99ff99;
+  color: #0000ff;
+  font-weight: 800;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  margin-top:1.5rem;
+  color: #ff3737; 
+}
+
+h2 {
+  color: #ffbf00;
+}
+
+h3{
+  color: #99ff99;
+  margin-bottom: 2rem;
+}
+
+h4{
+  color:#ffbf00;
+  margin-top:0;
+}
+
+figcaption{
+  font-family: 'Bubblegum Sans', cursive;
+  font-size: larger;
+
+}
+
+button {
+  color: #ffff99;
+}
+
+#flex-container {
+  display: flex;
+}
+
+
+
+#flex-child-2{
+  width: 31.25rem;
+  height: 41rem;
+  margin-top: 1.5rem;
+  margin-right: 2rem;
+  margin-left: -8rem;
+  border: ridge #ff3737 0.5rem ;
+  /* display:none; */
 }
