--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
- text-align: center;
+  text-align: center;
 }
 
 html,
@@ -15,94 +15,130 @@ body {
   align-items: center;
 }
 
-div{
-  /* background-color: blue; */
+div {
   width: 100%;
-  height: 100%;
+  max-height: 2000px;
+
+
 }
 
-img{
+img {
   width: 500px;
   border: 0.3rem #ff3737 solid;
   margin-bottom: 1rem;
 }
 
-.fruit{
-  width:190px;
+.fruit {
+  width: 190px;
   height: 190px;
   object-fit: cover;
-  margin-top:1rem;
+  margin-top: 1rem;
 }
 
-.dessert-img{
-  width:180px;
-  height:130px;
+.dessert-img {
+  width: 180px;
+  height: 130px;
   object-fit: cover;
   border: solid yellow 5px;
 
 }
 
 button {
-  background-color: #FF5050;
+  /* background-color: #FF5050; */
+  background-color: rgb(245, 124, 99, 0.7);
   padding: 15px;
   margin: 5px;
-  border:#ff3737 3px solid;
+  border: rgb(255, 55, 55) 3px solid;
   font-weight: 700;
+  border-radius: 20%;
+  color: #ffff66;
+
 }
 
-#changeColors{
-  color: white;
-  background-color: blueviolet;
+button:hover {
+  background-color: rgb(245, 124, 99);
 }
 
-.dessert-button{
+#changeColors-button {
+  color: #fffae6;
+  background-color: #c18ff0;
+  border-color: rgb(205, 88, 159)
+}
+
+#changeColors-button:hover {
+  background-color: #b478ed;
+}
+
+.dessert-button {
   background-color: #99ff99;
   color: #0000ff;
   font-weight: 800;
-  
+
 }
 
-h1{
-  margin-top:1.5rem;
-  color: #ff3737; 
+.dessert-button:hover {
+  background-color: #80ff80;
+}
+
+.hover-button {
+  color: yellow;
+  background-color: #f98b8b;
+}
+
+.hover-button:hover {
+  background-color: #ff8484;
+}
+
+h1 {
+  margin-top: 1.5rem;
+  color: #ff3737;
 }
 
 h2 {
   color: #ffbf00;
 }
 
-h3{
+h3 {
   color: #99ff99;
   margin-bottom: 2rem;
 }
 
-h4{
-  color:#ffbf00;
-  margin-top:0;
+h4 {
+  color: #ffbf00;
+  margin-top: 0;
 }
 
-figcaption{
+figcaption {
   font-family: 'Bubblegum Sans', cursive;
   font-size: larger;
-
+  color: #ffbf00;
+  font-weight: 700;
 }
 
-button {
-  color: #ffff99;
-}
 
 #flex-container {
   display: flex;
+  height: 100%;
+}
+
+.child {
+  flex: 1;
+  /* Allow child elements to grow and fill available space */
+}
+
+#flex-child-2 {
+  max-width: 65%;
 }
 
 
-
-#flex-child-2{
-  width: 31.25rem;
+#flex-child-2 {
+  /* width: 31.25rem; */
+  max-width: 35%;
   height: 41rem;
   margin-top: 1.5rem;
   margin-right: 2rem;
-  margin-left: -8rem;
-  border: ridge #ff3737 0.5rem ;
+  /* margin-left: -8rem; */
+  border: solid #ff3737 0.5rem;
+  border-radius: 5%;
   /* display:none; */
 }
