--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  background-color: rgb(255, 255, 153);
 }
 
 #root {
@@ -18,7 +19,7 @@ body {
 
 div {
   width: 100%;
-  max-height: 2000px;
+  /* max-height: 2000px; */
 
 }
 
@@ -51,8 +52,8 @@ img {
 }
 
 .dessert-img-bottom {
-  width: auto;
-  height: 200px;
+  width: 266px;
+  height: auto;
   object-fit: cover;
   border: solid #ffbf00 5px;
   margin-bottom: 0.2rem;
