--- a/src/App.css
+++ b/src/App.css
@@ -223,19 +223,20 @@ strong {
 
   max-width: 35%;
   height: 20rem;
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
   margin-right: 2rem;
+  margin-left:1rem;
   border: solid #ff6666 0.5rem;
   border-radius: 5%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around
+  justify-content: space-around;
 }
 
 #ASCII {
   color: #ffffcc;
   font-weight: 800;
-  font-size: 5rem;
+  font-size: 4.5rem;
   text-align: center;
 }
 
