--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,8 @@ strong {
 
 #flex-container {
   display: flex;
-  height: 100%;
+  min-height: 715px;
+  
 }
 
 .child {
@@ -257,7 +258,7 @@ strong {
 
   #unselected-flex-child-2 {
     max-width: 93%;
-    margin-right: 0;
+    margin-right: 1rem;
     margin-top: 0;
   }
 
@@ -314,6 +315,10 @@ strong {
 
   .dessert-img-bottom {
     width: 90%;
+  }
+
+  .hover-button {
+    display: none;
   }
   
   #unselected-flex-child-2 {
